--- a/src/app/components/banner/home-page-banner.component.html
+++ b/src/app/components/banner/home-page-banner.component.html
@@ -7,5 +7,5 @@
       <app-button (click)="navigateTo('/consultation')">Umów się na konsultację</app-button>
     </div>
   </div>
-  <img class="profile-image" ngSrc="/trener-profile.png" alt="Profile image of the trainer" priority width="474" height="849">
+  <img class="profile-image" ngSrc="/images/trener-profile.png" alt="Profile image of the trainer" priority width="474" height="729">
 </div>
