--- a/src/app/components/footer/footer.html
+++ b/src/app/components/footer/footer.html
@@ -9,7 +9,7 @@
     <li><a href="/contact">Kontakt</a></li>
   </ul>
 </div>
-<div>
+<div class="contact-section">
   <p class="text-l">Kontakt</p>
   <p>Napisz do mnie lub umów się na konsultację</p>
   <div class="buttons">
