--- a/src/app/pages/about-me/about-me.html
+++ b/src/app/pages/about-me/about-me.html
@@ -7,18 +7,18 @@
       <app-button (click)="navigateTo('/changes')"> Zobacz przemiany moich podopiecznych</app-button>
     </div>
   </div>
-  <img right ngSrc="/frame6.png" alt="Banner Image" height="487" width="622">
+  <img right ngSrc="/images/frame6.png" alt="Banner Image" height="487" width="622">
 </app-section>
 <div class="page-content">
   <app-image-gallery [columns]="4">
-    <img ngSrc="/frame1.png" alt="Banner Image" height="346" width="365">
-    <img ngSrc="/frame2.png" alt="Banner Image" height="346" width="365">
-    <img ngSrc="/frame3.png" alt="Banner Image" height="346" width="365">
-    <img ngSrc="/frame4.png" alt="Banner Image" height="346" width="365">
+    <img ngSrc="/images/frame1.png" alt="Banner Image" height="346" width="365">
+    <img ngSrc="/images/frame2.png" alt="Banner Image" height="346" width="365">
+    <img ngSrc="/images/frame3.png" alt="Banner Image" height="346" width="365">
+    <img ngSrc="/images/frame4.png" alt="Banner Image" height="346" width="365">
   </app-image-gallery>
 </div>
 <app-section class="marketing-stuff">
-  <img left ngSrc="/frame5.png" alt="Banner Image" height="487" width="622">
+  <img left ngSrc="/images/frame5.png" alt="Banner Image" height="487" width="622">
   <div right class="marketing-content">
     <h2>Indywidualne podejście. Realne efekty.</h2>
     <p>Stawiam na indywidualne podejście — zamiast gotowych schematów tworzę plany dopasowane do Twoich potrzeb, możliwości i celu, jaki chcesz osiągnąć. Dbam o poprawną technikę, bezpieczeństwo i realne efekty, dzięki czemu każdy trening staje się krokiem do lepszego samopoczucia i sprawniejszego ciała. Jeśli chcesz zacząć mądrze trenować, odzyskać formę lub w końcu zobaczyć długo wyczekiwane zmiany — umów się na konsultację i zacznijmy działać razem.</p>
