--- a/src/app/pages/achivments/achivments.html
+++ b/src/app/pages/achivments/achivments.html
@@ -6,7 +6,7 @@
       <app-button (click)="navigateTo('/consultation')">Umów się na konsultację</app-button>
     </div>
   </div>
-  <img right src="/frame7.png" alt="changes"/>
+  <img right src="/images/frame7.png" alt="changes"/>
 </app-section>
 <app-section class="personal-achivments ">
   <div left class="achivment-content">
@@ -25,7 +25,7 @@
   </app-card-grid>
 </div>
 <app-section class="changes ">
-    <img left src="/frame8.png" alt="changes"/>
+    <img left src="/images/frame8.png" alt="changes"/>
     <div right class="changes-content">
       <h2 class="title">prawie 500 osób zmieniło swoje życie</h2>
       <p>Dzięki mojemu doświadczeniu i indywidualnemu podejściu, pomogłem już blisko 500 osobom osiągnąć swoje cele i dokonać pozytywnych zmian - niezależnie, czy celem było zbudowanie mięśni, poprawa kondycji czy zrzucenie zbędnych kilogramów - wspólnie jesteśmy w stanie osiągnąć wszystko! Zobacz efekty moich podopiecznych.</p>
