--- a/src/app/pages/changes/changes.html
+++ b/src/app/pages/changes/changes.html
@@ -8,19 +8,19 @@
       <app-button (click)="navigateTo('/consultation')">Umów się na konsultację</app-button>
     </div>
   </div>
-  <img right ngSrc="/trener-front.png" alt="Banner Image" height="487" width="622"/>
+  <img right ngSrc="/images/trener-front.png" alt="Banner Image" height="487" width="622"/>
 </app-section>
 <div class="page-content">
   <app-image-gallery >
-    <img ngSrc="/frame8.png" alt="Banner Image" height="487" width="622"/>
-    <img ngSrc="/frame8.png" alt="Banner Image" height="487" width="622"/>
-    <img ngSrc="/frame8.png" alt="Banner Image" height="487" width="622"/>
-    <img ngSrc="/frame8.png" alt="Banner Image" height="487" width="622"/>
-    <img ngSrc="/frame8.png" alt="Banner Image" height="487" width="622"/>
-    <img ngSrc="/frame8.png" alt="Banner Image" height="487" width="622"/>
-    <img ngSrc="/frame8.png" alt="Banner Image" height="487" width="622"/>
-    <img ngSrc="/frame8.png" alt="Banner Image" height="487" width="622"/>
-    <img ngSrc="/frame8.png" alt="Banner Image" height="487" width="622"/>
+    <img ngSrc="/images/frame8.png" alt="Banner Image" height="487" width="622"/>
+    <img ngSrc="/images/frame8.png" alt="Banner Image" height="487" width="622"/>
+    <img ngSrc="/images/frame8.png" alt="Banner Image" height="487" width="622"/>
+    <img ngSrc="/images/frame8.png" alt="Banner Image" height="487" width="622"/>
+    <img ngSrc="/images/frame8.png" alt="Banner Image" height="487" width="622"/>
+    <img ngSrc="/images/frame8.png" alt="Banner Image" height="487" width="622"/>
+    <img ngSrc="/images/frame8.png" alt="Banner Image" height="487" width="622"/>
+    <img ngSrc="/images/frame8.png" alt="Banner Image" height="487" width="622"/>
+    <img ngSrc="/images/frame8.png" alt="Banner Image" height="487" width="622"/>
   </app-image-gallery>
 </div>
   <app-section class="social-media">
@@ -33,8 +33,8 @@
       </div>
     </div>
     <div right class="instagram-images center">
-      <img ngSrc="/frame1.png" alt="Banner Image" height="346" width="365"/>
-      <img ngSrc="/frame3.png" alt="Banner Image" height="346" width="365"/>
-      <img ngSrc="/frame2.png" alt="Banner Image" height="346" width="365"/>
+      <img ngSrc="/images/frame1.png" alt="Banner Image" height="346" width="365"/>
+      <img ngSrc="/images/frame3.png" alt="Banner Image" height="346" width="365"/>
+      <img ngSrc="/images/frame2.png" alt="Banner Image" height="346" width="365"/>
     </div>
   </app-section>
