--- a/src/app/pages/consultation/consultation.html
+++ b/src/app/pages/consultation/consultation.html
@@ -11,6 +11,6 @@
     <app-contact-form/>
   </div>
   <div right>
-    <img ngSrc="/Calendar.png" alt="calendar" width="693" height="831"/>
+    <img ngSrc="/images/Calendar.png" alt="calendar" width="693" height="831"/>
   </div>
 </app-section>
