--- a/src/app/pages/gallery/gallery.scss
+++ b/src/app/pages/gallery/gallery.scss
@@ -4,7 +4,7 @@
   background-color: styles.$bg-surface-color;
 
   .banner-content {
-    h1 {
+    .title {
       font-size: 2.7rem;
       line-height: 3.5rem;
       text-transform: uppercase;
