--- a/src/app/pages/home/home.html
+++ b/src/app/pages/home/home.html
@@ -4,7 +4,7 @@
 </div>
 <app-section class="offer-description section">
   <div left class="image-box">
-    <img class="profile-image" ngSrc="/trener-front.png" alt="Profile image of the trainer" priority width="697"
+    <img class="profile-image" ngSrc="/images/trener-front.png" alt="Profile image of the trainer" priority width="697"
          height="518">
   </div>
   <div right class="content">
