--- a/src/app/shared/components/controls/button/button.html
+++ b/src/app/shared/components/controls/button/button.html
@@ -1,6 +1,7 @@
 <div class="button">
   <button
     [class]="variant()"
+    [class]="class()"
     [class.disabled]="disabled()"
     [class.active]="active()"
     [disabled]="disabled()"
