--- a/src/app/shared/components/elements/contact-form/contact-form.component.html
+++ b/src/app/shared/components/elements/contact-form/contact-form.component.html
@@ -18,6 +18,7 @@
     [control]="message"
   ></app-text-input>
   <app-button
+    class="submit"
     type="submit"
     [disabled]="contactForm.invalid"
     tooltip="Wszystkie wymagane pola muszą być wypełnione"
