--- a/src/app/components/banner/home-page-banner.component.scss
+++ b/src/app/components/banner/home-page-banner.component.scss
@@ -16,7 +16,7 @@
   left: 0;
   width: 100%;
   height: 100%;
-  background-image: url("/background-image.jpeg");
+  background-image: url("/images/background-image.jpeg");
   background-size: cover;
   background-position: center;
   background-repeat: no-repeat;
@@ -66,8 +66,8 @@ img {
 
 @media (max-width: 768px) {
   :host {
-    width: 100%; /* Changed from 100vw to 100% */
-    box-sizing: border-box; /* Added to include padding in the width */
+    width: 100%;
+    box-sizing: border-box;
     height: auto;
     padding-inline: 20px;
     flex-direction: column;
@@ -77,7 +77,7 @@ img {
   .banner-content {
     flex-direction: column;
     gap: 20px;
-    padding-top: 50px; /* Adjust as needed */
+    padding-top: 50px;
   }
 
   .text-box {
@@ -87,11 +87,11 @@ img {
   }
 
   .profile-image {
-    margin-top: -56px; /* Overlap the text box */
+    margin-top: -56px;
     margin-right: 0;
-    width: 80%; /* Adjust size for mobile */
+    width: 80%;
     height: auto;
-    max-width: 300px; /* Limit max size */
+    max-width: 300px;
     z-index: 1;
   }
 
